[package]
name = "tantivy"
version = "0.25.1"
readme = "README.md"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2021"
license = "MIT"

[lib]
name = "tantivy"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.28.2"

[dependencies]
base64 = "0.22"
chrono = "0.4.44"
tantivy = "0.25.0"
tantivy-tokenizers = { git = "https://github.com/Kapiche/tantivy-tokenizers", tag = "v0.2.0" }
itertools = "0.14.0"
futures = "0.3.32"
pythonize = "0.26.0"
serde = "1.0"
serde_json = "1.0.149"
fnv = "1.0.7"

[dependencies.pyo3]
version = "0.26.0"
features = ["chrono", "extension-module"]
